<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    tools:context=".AccountCreatedActivity">

    <!-- Success GIF -->

    <!-- Title -->

    <ImageView
        android:id="@+id/successGif"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/empty_desc"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/successGif"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/successTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/account_created"
        android:textColor="#c62828"
        android:textSize="36sp"
        android:textStyle="bold" />

    <!-- Message -->
    <TextView
        android:id="@+id/account_created_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ellipsize="none"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/account_created_message"
        android:textColor="#455a64"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_created_message" />

    <!-- Redirect info -->
    <TextView
        android:id="@+id/redirecting_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/redirecting_message"
        android:textColor="#607d8b"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_created_message" />
</LinearLayout>