<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    tools:context=".ResetPasswordSuccess">

    <!-- Success GIF -->

    <!-- Title -->

    <ImageView
        android:id="@+id/successGif"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/empty_desc"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/successGif"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/successTitle"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/pw_reset_successfully"
        android:textColor="#c62828"
        android:textSize="28sp"
        android:textStyle="bold" />

    <!-- Message -->
    <TextView
        android:id="@+id/account_created_message"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ellipsize="none"
        android:gravity="center"
        android:text="@string/new_pw"
        android:textColor="#455a64"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_created_message" />

</LinearLayout>